tests/NormalTests/paczka1/fuzzy1/51924784.err
Error in line 3: A221 S850 84,3
Error in line 4: A221 S400 57,1
Error in line 1: WxN S400 96,3
Error in line 23: PrN87iZGL A221 38,3
Error in line 22: Qmij S400 89,0
Error in line 31: A221 S850 54,
Error in line 10: WxN A221 78,4
Error in line 29: Qmij S850 70,3
